feat: update AutoDataNetScraper to use first candidate URL and improve model year retrieval